16129
=== What steps will reproduce the problem (please be specific and Look at the nightly spec for May 14, 2011 or before.


=== What is the expected behavior? ===
I would expect something like:

{code}
UnicodeEscape ::= \u{u} hexDigit hexDigit hexDigit hexDigit
{code}


See JSL 3.3:

{code}
UnicodeInputCharacter:
UnicodeEscape
RawInputCharacter
UnicodeEscape:
\ UnicodeMarker HexDigit HexDigit HexDigit HexDigit
UnicodeMarker:
u
UnicodeMarker u
{code}


=== What do you see instead? ===
Instead we have this:

{code}
UnicodeEscape ::= \{\\}u{u} hexDigit hexDigit hexDigit hexDigit
{code}


=== Additional information ===
This is quite possibly the issue being discussed here: http://scala-programming-language.1934581.n4.nabble.com/Unicode-escapes-td2217591.html. However, I don't see that a ticket was over opened or a correction made.

If multiple backslashes was truly allowed then this program would compile:


{code}
object Program {
  val \\\u1234 = ""
}
{code}


Instead we get:


{code}
/home/yuvi/Desktop/Program.scala:2: error: illegal start of simple pattern
  val \\\u1234 = ""
               ^
.../Program.scala:3: error: '=' expected but '}' found.
}
^
two errors found

{code}


=== What versions of the following are you using? ===
  - Scala: 2.9.0.final
  - Java:
java version "1.6.0_22"
OpenJDK Runtime Environment (IcedTea6 1.10.1) (6b22-1.10.1-0ubuntu1)
OpenJDK 64-Bit Server VM (build 20.0-b11, mixed mode)
  - Operating system:
Ubuntu 11.04 x64 desktop.
